# applied_statistics_ANOVA_gtk_rs

./: Cargo.toml  README.md
src/: main.rs
src/data/: DataTable.rs  ResultVars.rs  Support.rs  mod.rs
src/datagrid/: application_row.ui  imp.rs  mod.rs
